# capter

./: README.md  pyproject.toml
src/capter/: __init__.py
