[project]
name = "capter"
version = "1.0.0"
dependencies = ["click", "pyobjc-framework-Quartz", "screenshot"]
requires-python = ">=3.8"
authors = [{ name = "Deepak Dewani", email = "kumard8308887772@gmail.com" }]
description = "A small utility to capture the current terminal window and put the image to the clipboard to easily share the output."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/deepakkumardewani/capter"

[project.scripts]
capter = "capter:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
